# marketplace-backend

./: .gitignore  Cargo.toml  Dockerfile  Makefile
src/: main.rs
src/handlers/: auth.rs  chat.rs  mod.rs  products.rs  users.rs
src/services/: s3.rs
tests/: create_product.rs
