[package]
name = "marketplace-api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
futures-util = "0.3.31"

actix-web = "4.10.2"
actix-cors = "0.7"
actix-multipart = "0.7.2"

utoipa = { version = "5.3.1", features = ["macros", "actix_extras", "chrono"] }
utoipa-actix-web = "0.1.2"
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
utoipa-scalar = { version = "0.3.0", features = ["actix-web"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"

aws-types = "1.1"
aws-sdk-s3 = "1.82.0"
aws-config = "1.6.1"

sqlx = { version = "0.8.5", features = [
    "postgres",
    "macros",
    "runtime-tokio",
    "tls-rustls",
    "uuid",
    "chrono",
    "bigdecimal",
] }
rand_core = "0.9.3"
argon2 = "0.5"
dotenv = "0.15"
chrono = { version = "0.4.40", features = ["serde"] }
jsonwebtoken = "9"
lettre = { version = "0.11.15" }
sanitize-filename = "0.6.0"
once_cell = "1.19"
regex = "1"
uuid = { version = "1", features = ["serde", "v4"] }
reqwest = { version = "0.12.15", features = ["json", "multipart"] }
mime_guess = "2.0"
bigdecimal = { version = "0.4.8", features = ["serde"] }
